# task-conductor

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  card-fan-demo.html  index.html  req-viz-demo.html  start.sh
.claude/: plan-p0-p1.md
assets/: index-B7ibIkd2.js  index-BJLjvB8L.js  index-CBOrzaTW.css  index-CCU39YEW.js  index-CaTNoVPL.js  index-DH5aXF5H.css  index-Df9KlQ05.css  index-DtCTZhcM.css
backend/: pyproject.toml  tc_settings.json
backend/app/: auth.py  database.py  hooks.py  main.py  models.py  scheduler.py  schemas.py  session.py  tmux_manager.py  tunnel.py  worktree.py
backend/app/claude/: metrics_store.py  pool.py  stream.py
backend/app/feishu/: cards.py  client.py  dispatcher.py  handler.py
backend/app/notify/: dispatcher.py  tts.py  webhook.py
backend/app/pipeline/: engine.py  executor.py  runner.py  schemas.py
backend/app/pipeline/stages/: analysis.py  plan.py  prd.py
backend/app/routers/: chat.py  claude_config.py  files.py  git.py  knowledge.py  mcp.py  metrics.py  pipeline.py  projects.py  sessions.py  settings_router.py  task_manager.py  tasks.py  tc_config.py
backend/app/ws/: manager.py
backend/tests/: test_api.py  test_auth.py  test_claude_pool.py  test_conversation_note.py  test_hooks.py  test_metrics_api.py  test_metrics_store.py  test_models.py  test_notify.py  test_pipeline.py  test_stage_analysis.py  test_transcript.py  test_tunnel_auth.py  test_ws.py
docs/: README.md  技术文档.md  (+1 more)
ws-core/: Cargo.toml
ws-core/src/: lib.rs  manager.rs  message.rs  wasm.rs
ws-core/src/transport/: browser.rs  mod.rs  native.rs
(+124 files in other folders)
